fix layout bug

--- a/SmsServiceApp/WebCustomerApp/wwwroot/css/company.css
+++ b/SmsServiceApp/WebCustomerApp/wwwroot/css/company.css
@@ -9,7 +9,7 @@
 
 .stepwizard {
     display: table;
-    width: 100%;
+    width: 80%;
     position: relative;
 }
 
